src/Main.javaを追加