@@ -1,10 +1,10 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Locale;
+import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
-        List<String> names = List.of("yamada", "tanaka", "yasuda", "suzuki", "iida");
-        names.stream().map(String::toUpperCase).forEach(System.out::println);
+        List<String> faang = Arrays.asList("yamada", "tanaka", "yasuda", "suzuki", "iida");
+
+        Collections.sort(faang);
+        System.out.println(faang);
     }
 }
